dark mode fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
 }
 
 .title {
-  @apply fixed top-20 text-3xl font-bold text-center text-neutral-500 dark:text-neutral-200 items-center inline-flex;
+  @apply fixed top-20 text-3xl font-bold text-center text-neutral-500 dark:text-neutral-300 items-center inline-flex;
 }
 
 .title::before {
