--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,12 +11,11 @@
 
 html,
 body {
-  @apply bg-neutral-100 h-screen px-2;
+  @apply bg-neutral-100 dark:bg-neutral-900 h-screen px-2;
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
-    @apply bg-neutral-800;
   }
 }
